# Yelp_Project---rag-agent-deployment

./: .gitignore  README.md  README_zh.md  app.py  pyproject.toml  requirements.txt
artifacts/: step0_train_and_save.py
configs/: groq.yaml  lmdeploy.yaml  ollama.yaml
docs/: benchmark_report.md  project_overview.html  project_overview_zh.html
notebooks/: benchmark_analysis.ipynb  colab_awq_deploy.ipynb  colab_quality_eval.ipynb
results/: deployment_perf.json  eval_groq_llama_agent.csv  eval_lmdeploy_awq.csv  eval_lmdeploy_fp16.csv  eval_results.csv
scripts/: serve_lmdeploy.sh  smoke_test.py  upload_to_hf.py
src/yelp_rag_agent/: config.py
src/yelp_rag_agent/backends/: __init__.py  base.py  groq.py  hf_inference.py  lmdeploy.py  ollama.py
src/yelp_rag_agent/evaluation/: metrics.py  rubric.md  run_eval.py  test_questions.json
src/yelp_rag_agent/pipelines/: agent_runner.py  rag_baseline.py
src/yelp_rag_agent/tools/: classifier_tool.py  retrieval_tool.py  stats_tool.py  summarizer_tool.py
vectorstore/: build_vectorstore.py
